[package]
name = "bertrs"
version = "0.1.0"
authors = ["jrovacsek <jay@rovacsek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = "0.4.0"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
rand = "0.7.3"
log = "0.4"